# slt_engine

./: CMakeLists.txt  README.md
assets/opengl/programs/: ss_texture_stamp.frag  ss_texture_stamp.json  ss_texture_stamp.vert
cmake/: slt_engineConfig.cmake.in  slt_engineMacros.cmake
include/slt/: color.h  core.h  image.h  log.h  settings.h
include/slt/algo/: rect_pack.h
include/slt/concur/: blocking_queue.h  event_queue.h  worker.h
include/slt/debug/: assert.h  invariant.h  validated.h
include/slt/file/: read.h  write.h
include/slt/math/: angle.h  pi.h  vec.h
include/slt/mem/: alignment.h  data_block.h  data_view.h  read_buf.h
include/slt_runtime/: render.h  resources.h  runtime.h
include/slt_runtime/audio/: emmiter.h  sound.h
include/slt_runtime/drawing/: attribute.h  blending.h  model.h  program.h  texture.h  texture_atlas.h  uniform.h
include/slt_runtime/gui/: data_binding.h  font.h  viewport.h  widget.h
include/slt_runtime/gui/layouts/: canvas.h
include/slt_runtime/gui/renderer/: raw_renderer.h
include/slt_runtime/gui/widgets/: button.h  image.h  text.h
src/slt/: CMakeLists.txt  core.cpp
src/slt/concur/: event_queue.cpp  worker.cpp
src/slt/debug/: assert.cpp
src/slt/drawing/: image.cpp
src/slt/file/: file.cpp  file_internal.h
src/slt/log/: log.cpp  log_internal.h
src/slt/mem/: capnputils.h
src/slt/settings/: settings.cpp  settings_internal.h
src/slt/string/: CMakeLists.txt  split.cpp
src/slt_capnp/: CMakeLists.txt  render.capnp  resources.capnp
src/slt_runtime/: CMakeLists.txt  resources.cpp  runtime.cpp
src/slt_runtime/audio/: emmiter.cpp  sound.cpp  system.cpp  system.h
src/slt_runtime/drawing/: model.cpp
src/slt_runtime/gui/: canvas.cpp  font.cpp  image.cpp  system.cpp  system.h  text.cpp  viewport.cpp
src/slt_runtime/gui/renderer/: raw_renderer.cpp
src/slt_runtime_glfw/: CMakeLists.txt  runtime_impl.cpp
src/slt_runtime_glfw/render/: attribute.cpp  blending.cpp  gl_includes.h  model.cpp  model.h  program.cpp  program.h  render.cpp  texture.cpp  texture.h  uniform.cpp  uniform.h
tools/: CMakeLists.txt
tools/registry_compiler/: CMakeLists.txt  main.cpp
tools/shader_compiler/: CMakeLists.txt  main.cpp
